Renamed index1.html to index.html and updated links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-4">
-                    <a class="navbar-brand" href="index1.html" onclick="resetFilters()">GOO RIDE</a>
-                    <a href="index1.html" class="home-btn text-white" onclick="resetFilters()">
+                    <a class="navbar-brand" href="index.html" onclick="resetFilters()">GOO RIDE</a>
+                    <a href="index.html" class="home-btn text-white" onclick="resetFilters()">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1">
