--- a/language.html
+++ b/language.html
@@ -14,8 +14,8 @@
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index1.html">GOO RIDE</a>
-                    <a href="index1.html" class="home-btn text-white">
+                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
+                    <a href="index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
