--- a/logout.html
+++ b/logout.html
@@ -14,8 +14,8 @@
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index1.html" onclick="resetFilters()">GOO RIDE</a>
-                    <a href="index1.html" class="home-btn text-white" onclick="resetFilters()">
+                    <a class="navbar-brand me-3" href="index.html" onclick="resetFilters()">GOO RIDE</a>
+                    <a href="index.html" class="home-btn text-white" onclick="resetFilters()">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
@@ -48,7 +48,7 @@
         <div class="py-5">
             <h2 class="mb-4">You have been logged out</h2>
             <p class="lead mb-4">Thank you for using Goo Ride! You will be redirected to the homepage in <span id="countdown">3</span> seconds.</p>
-            <a href="index1.html" class="btn btn-primary" onclick="resetFilters()">Go to Homepage Now</a>
+            <a href="index.html" class="btn btn-primary" onclick="resetFilters()">Go to Homepage Now</a>
         </div>
     </main>
 
@@ -69,8 +69,8 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index1.html" class="text-white">Home</a></li>
-                        <li><a href="index1.html" class="text-white">Vehicles</a></li>
+                        <li><a href="index.html" class="text-white">Home</a></li>
+                        <li><a href="index.html" class="text-white">Vehicles</a></li>
                         <li><a href="#" class="text-white">Pricing</a></li>
                         <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
