--- a/likes.html
+++ b/likes.html
@@ -13,8 +13,8 @@
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index1.html">GOO RIDE</a>
-                    <a href="index1.html" class="home-btn text-white">
+                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
+                    <a href="index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
@@ -63,7 +63,7 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index1.html" class="text-white">Home</a></li>
+                        <li><a href="index.html" class="text-white">Home</a></li>
                         <li><a href="vehicles.html" class="text-white">Vehicles</a></li>
                         <li><a href="pricing.html" class="text-white">Pricing</a></li>
                         <li><a href="locations.html" class="text-white">Locations</a></li>
@@ -114,7 +114,7 @@
                     <div class="col-12 text-center py-5">
                         <h4>No liked vehicles</h4>
                         <p>You haven't liked any vehicles yet.</p>
-                        <a href="index1.html" class="btn btn-primary">Browse Vehicles</a>
+                        <a href="index.html" class="btn btn-primary">Browse Vehicles</a>
                     </div>
                 `;
                 return;
