--- a/vehicle.html
+++ b/vehicle.html
@@ -14,8 +14,8 @@
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-4">
-                    <a class="navbar-brand" href="index1.html" onclick="resetFilters()">GOO RIDE</a>
-                    <a href="index1.html" class="home-btn text-white" onclick="resetFilters()">
+                    <a class="navbar-brand" href="index.html" onclick="resetFilters()">GOO RIDE</a>
+                    <a href="index.html" class="home-btn text-white" onclick="resetFilters()">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1">
@@ -90,8 +90,8 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Home</a></li>
-                        <li><a href="#" class="text-white">Vehicles</a></li>
+                        <li><a href="index.html" class="text-white">Home</a></li>
+                        <li><a href="index.html" class="text-white">Vehicles</a></li>
                         <li><a href="#" class="text-white">Pricing</a></li>
                         <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
