--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Goo Ride - Vehicle Rentals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -26,18 +26,19 @@
                             <i class="fas fa-user fs-4"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="profile.html"><i class="fas fa-user me-2"></i>Profile</a></li>
-                            <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
-                            <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
-                            <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
-                            <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
-                            <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
-                            <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
-                            <li><a class="dropdown-item" href="language.html"><i class="fas fa-language me-2"></i>Language</a></li>
-                            <li><a class="dropdown-item" href="help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
-                            <li><a class="dropdown-item" href="install.html"><i class="fas fa-download me-2"></i>Install App</a></li>
+                            <li><a class="dropdown-item" href="pages/profile.html"><i class="fas fa-user me-2"></i>Profile</a></li>
+                            <li><a class="dropdown-item" href="pages/posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
+                            <li><a class="dropdown-item" href="pages/likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
+                            <li><a class="dropdown-item" href="pages/saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
+                            <li><a class="dropdown-item" href="pages/history.html"><i class="fas fa-history me-2"></i>History</a></li>
+                            <li><a class="dropdown-item" href="pages/notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
+                            <li><a class="dropdown-item" href="pages/settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
+                            <li><a class="dropdown-item" href="pages/language.html"><i class="fas fa-language me-2"></i>Language</a></li>
+                            <li><a class="dropdown-item" href="pages/help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
+                            <li><a class="dropdown-item" href="pages/install.html"><i class="fas fa-download me-2"></i>Install App</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i>Log Out</a></li>
+                            <li><a class="dropdown-item text-danger" href="pages/logout.html"><i class="fas fa-sign-out-alt me-2"></i>Log Out</a></li>
                         </ul>
                     </div>
                 </div>
@@ -62,8 +63,8 @@
 
     <!-- Main Content -->
     <main class="main-content">
-        <div class="container py-4">
-            <div id="vehicleContainer"></div>
+        <div class="container pt-5 column">
+            <div class="row" id="vehicleContainer"></div>
             <!-- Coupons Section -->
             <section class="coupons-section py-5">
                 <h3 class="mb-4 text-center">Available Coupons</h3>
@@ -111,8 +112,8 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Home</a></li>
-                        <li><a href="#" class="text-white">Vehicles</a></li>
+                        <li><a href="index.html" class="text-white">Home</a></li>
+                        <li><a href="index.html" class="text-white">Vehicles</a></li>
                         <li><a href="#" class="text-white">Pricing</a></li>
                         <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
@@ -120,9 +121,9 @@
                 <div class="col-md-3 mb-4 mb-md-0">
                     <h5>Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-map-marker-alt me-2"></i> 123 Street, Mumbai</li>
-                        <li><i class="fas fa-phone me-2"></i> +91 9876543210</li>
-                        <li><i class="fas fa-envelope me-2"></i> info@goodride.com</li>
+                        <li><i class="fas fa-map-marker-alt me-2"></i>123 Street, Mumbai</li>
+                        <li><i class="fas fa-phone me-2"></i>+91 9876543210</li>
+                        <li><i class="fas fa-envelope me-2"></i>info@goodride.com</li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -136,18 +137,18 @@
             <hr class="my-4 bg-light">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">© 2023 Goo Ride. All rights reserved.</p>
+                    <p class="mb-0">© 2025 Goo Ride. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <a href="privacy-policy.html" class="text-white me-3">Privacy Policy</a>
-                    <a href="terms-of-service.html" class="text-white me-3">Terms of Service</a>
-                    <a href="faq.html" class="text-white">FAQ</a>
+                    <a href="docs/privacy-policy.html" class="text-white me-3">Privacy Policy</a>
+                    <a href="docs/terms-of-service.html" class="text-white me-3">Terms of Service</a>
+                    <a href="docs/faq.html" class="text-white">FAQ</a>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
