--- a/pages/chat.html
+++ b/pages/chat.html
@@ -3,30 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile - Goo Ride</title>
+    <title>Goo Ride - Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-picker-element@1.12.0/index.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+
 </head>
 <body>
+    <!-- Header Section -->
     <header class="header sticky-top">
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
-                <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                <div class="d-flex align-items-center w-100 gap-4">
+                    <a class="navbar-brand" href="../index.html">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
-                    <div class="flex-grow-1"></div>
+                    <div class="flex-grow-1">
+                        <input type="text" class="search-bar form-control" placeholder="Search vehicles..." id="searchInput">
+                    </div>
                     <div class="dropdown">
-                        <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown">
+                        <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user fs-4"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="profile.html"><i class="fas fa-user me-2"></i>Profile</a></li>
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
-                            <li><a class="dropdown-item" href=".saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
@@ -42,34 +48,37 @@
         </nav>
     </header>
 
-    <main class="container py-5">
-        <h2>User Profile</h2>
-        <div class="card p-4">
-            <div class="row">
-                <div class="col-md-4 text-center">
-                    <img src="https://via.placeholder.com/150" class="rounded-circle mb-3" alt="Profile Picture">
-                    <button class="btn btn-primary">Change Picture</button>
-                </div>
-                <div class="col-md-8">
-                    <h4>Personal Information</h4>
-                    <div class="mb-3">
-                        <label class="form-label">Name</label>
-                        <input type="text" class="form-control" value="John Doe">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Email</label>
-                        <input type="email" class="form-control" value="john.doe@example.com">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Phone</label>
-                        <input type="tel" class="form-control" value="+91 9876543210">
-                    </div>
-                    <button class="btn btn-primary">Save Changes</button>
-                </div>
+    <!-- Chat Section -->
+    <main class="chat-container container">
+        <div class="chat-header">
+            <div class="d-flex align-items-center">
+                <i class="fas fa-arrow-left me-3" onclick="window.history.back()"></i>
+                <img src="https://via.placeholder.com/40" class="profile-pic" alt="Owner">
+                <h5 class="mb-0" id="chatOwnerName"></h5>
             </div>
+            <div class="dropdown">
+                <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item block-chat" href="#"><i class="fas fa-ban me-2"></i>Block Chat</a></li>
+                    <li><a class="dropdown-item clear-chat" href="#"><i class="fas fa-trash me-2"></i>Clear Chat</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="chat-messages" id="chatMessages"></div>
+        <div class="chat-input">
+            <button class="btn btn-link emoji-btn"><i class="fas fa-smile"></i></button>
+            <emoji-picker class="emoji-picker"></emoji-picker>
+            <input type="text" class="form-control" id="messageInput" placeholder="Type a message...">
+            <input type="file" class="file-input" id="fileInput" accept="image/*,video/*">
+            <button class="btn btn-link file-btn"><i class="fas fa-paperclip"></i></button>
+            <button class="btn btn-link mic-btn"><i class="fas fa-microphone"></i></button>
+            <button class="btn btn-primary send-btn"><i class="fas fa-paper-plane"></i></button>
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
             <div class="row">
@@ -86,8 +95,8 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="index.html" class="text-white">Vehicles</a></li>
+                        <li><a href="../index.html" class="text-white">Home</a></li>
+                        <li><a href="../index.html" class="text-white">Vehicles</a></li>
                         <li><a href="#" class="text-white">Pricing</a></li>
                         <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
@@ -123,5 +132,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emoji-picker-element@1.12.0/index.js"></script>
+    <script src="../assets/js/chat.js"></script>
 </body>
 </html>
