--- a/pages/chats.html
+++ b/pages/chats.html
@@ -3,23 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notifications - Goo Ride</title>
+    <title>Goo Ride - Chats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <style>
+        .chat-list {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .chat-item {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+            cursor: pointer;
+        }
+        .chat-item:hover {
+            background-color: #f8f9fa;
+        }
+        .chat-item img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 15px;
+        }
+        .chat-info {
+            flex-grow: 1;
+        }
+        .chat-info h6 {
+            margin: 0;
+            font-size: 1rem;
+        }
+        .chat-info p {
+            margin: 0;
+            font-size: 0.85rem;
+            color: #666;
+        }
+        .chat-time {
+            font-size: 0.75rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
+    <!-- Header Section -->
     <header class="header sticky-top">
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
-                <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                <div class="d-flex align-items-center w-100 gap-4">
+                    <a class="navbar-brand" href="../index.html" onclick="resetFilters()">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white" onclick="resetFilters()">
                         <i class="fas fa-home fs-4"></i>
                     </a>
-                    <div class="flex-grow-1"></div>
+                    <div class="flex-grow-1">
+                        <input type="text" class="search-bar form-control" placeholder="Search vehicles..." id="searchInput">
+                    </div>
                     <div class="dropdown">
-                        <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown">
+                        <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user fs-4"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
@@ -27,6 +68,7 @@
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
                             <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
@@ -42,33 +84,15 @@
         </nav>
     </header>
 
-    <main class="container py-5">
-        <h2>Notifications</h2>
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Booking Confirmed</h5>
-                    <small>3 mins ago</small>
-                </div>
-                <p class="mb-1">Your booking for Royal Enfield Classic 350 has been confirmed.</p>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">New Coupon Available</h5>
-                    <small>1 hour ago</small>
-                </div>
-                <p class="mb-1">Use code FLAT50 to get 50% off your first ride!</p>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Vehicle Available</h5>
-                    <small>2 hours ago</small>
-                </div>
-                <p class="mb-1">Honda Activa 6G is now available in your area.</p>
-            </a>
+    <!-- Main Content -->
+    <main class="main-content py-4">
+        <div class="container">
+            <h3 class="mb-4">Chats</h3>
+            <div class="chat-list" id="chatList"></div>
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
             <div class="row">
@@ -85,8 +109,8 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="index.html" class="text-white">Vehicles</a></li>
+                        <li><a href="../index.html" class="text-white">Home</a></li>
+                        <li><a href="../index.html" class="text-white">Vehicles</a></li>
                         <li><a href="#" class="text-white">Pricing</a></li>
                         <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
@@ -122,5 +146,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/chats.js"></script>
 </body>
 </html>
