--- a/pages/install.html
+++ b/pages/install.html
@@ -6,138 +6,8 @@
     <title>Goo Ride - Install App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        /* General Styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #e3f2fd; /* Light blue background */
-            min-height: 100vh;
-        }
+    <link rel="stylesheet" href="../assets/css/styles.css">
 
-        /* Header Styles */
-        .header .navbar {
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-
-        .search-bar {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ced4da;
-            border-radius: 20px;
-            outline: none;
-        }
-
-        .search-bar:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
-        }
-
-        /* Install App Section */
-        .install-section {
-            padding: 40px 0;
-            background-color: #bbdefb; /* Slightly darker blue */
-            border-radius: 10px;
-            margin: 20px 0;
-        }
-
-        .install-section img.app-image {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .install-section .btn {
-            border-radius: 20px;
-            padding: 10px 20px;
-            font-size: 1.1rem;
-            transition: transform 0.2s;
-        }
-
-        .install-section .btn:hover {
-            transform: scale(1.05);
-        }
-
-        .install-section .btn i {
-            margin-right: 8px;
-        }
-
-        .install-section .store-badge {
-            max-width: 150px;
-            margin: 10px;
-            transition: transform 0.2s;
-        }
-
-        .install-section .store-badge:hover {
-            transform: scale(1.1);
-        }
-
-        .install-section .feature-item {
-            font-size: 1rem;
-            margin-bottom: 10px;
-        }
-
-        .install-section .feature-item i {
-            color: #007bff;
-            margin-right: 10px;
-        }
-
-        /* Footer Styles */
-        .footer {
-            background-color: #212529;
-        }
-
-        .footer h5 {
-            font-size: 1.25rem;
-            margin-bottom: 15px;
-        }
-
-        .footer a {
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-        .social-links a {
-            font-size: 1.2rem;
-            transition: color 0.2s;
-        }
-
-        .social-links a:hover {
-            color: #007bff;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .navbar-brand {
-                font-size: 1.2rem;
-            }
-
-            .search-bar {
-                font-size: 0.9rem;
-            }
-
-            .install-section {
-                margin: 10px 0;
-                padding: 20px 0;
-            }
-
-            .install-section .btn {
-                font-size: 1rem;
-                padding: 8px 15px;
-            }
-
-            .install-section .store-badge {
-                max-width: 120px;
-            }
-        }
-    </style>
 </head>
 <body>
     <!-- Header Section -->
@@ -145,8 +15,8 @@
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                    <a class="navbar-brand me-3" href="../index.html">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
@@ -159,11 +29,12 @@
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
                             <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
                             <li><a class="dropdown-item" href="language.html"><i class="fas fa-language me-2"></i>Language</a></li>
-                            <li><a class="dropdown-item" href="help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
+                            <li><a class="dropdown-item" href="../docs/help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
                             <li><a class="dropdown-item" href="install.html"><i class="fas fa-download me-2"></i>Install App</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i>Log Out</a></li>
@@ -234,9 +105,9 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="index.html" class="text-white">Vehicles</a></li>
-                        <li><a href="#" class="text-white">Pricing</a></li>
-                        <li><a href="#" class="text-white">Locations</a></li>
+                        <li><a href="vehicles.html" class="text-white">Vehicles</a></li>
+                        <li><a href="pricing.html" class="text-white">Pricing</a></li>
+                        <li><a href="locations.html" class="text-white">Locations</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-4 mb-md-0">
@@ -248,7 +119,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h5>Newsletter</h5>
+                    <h5>News Letter</h5>
                     <div class="mb-3">
                         <input type="email" class="form-control" placeholder="Your Email">
                     </div>
@@ -261,9 +132,9 @@
                     <p class="mb-0">© 2023 Goo Ride. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <a href="privacy-policy" class="text-white me-3">Privacy Policy</a>
-                    <a href="terms-of-service.html" class="text-white me-3">Terms of Service</a>
-                    <a href="faq.html" class="text-white">FAQ</a>
+                    <a href="../docs/privacy-policy.html" class="text-white me-3">Privacy Policy</a>
+                    <a href="../docs/terms-of-service.html" class="text-white me-3">Terms of Service</a>
+                    <a href="../docs/faq.html" class="text-white">FAQ</a>
                 </div>
             </div>
         </div>
