--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settings - Goo Ride</title>
+    <title>Notifications - Goo Ride</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
     <header class="header sticky-top">
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                    <a class="navbar-brand me-3" href="../index.html">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
@@ -27,11 +27,12 @@
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
                             <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
                             <li><a class="dropdown-item" href="language.html"><i class="fas fa-language me-2"></i>Language</a></li>
-                            <li><a class="dropdown-item" href="help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
+                            <li><a class="dropdown-item" href="../docs/help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
                             <li><a class="dropdown-item" href="install.html"><i class="fas fa-download me-2"></i>Install App</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i>Log Out</a></li>
@@ -43,29 +44,29 @@
     </header>
 
     <main class="container py-5">
-        <h2>Settings</h2>
-        <div class="card p-4">
-            <h4>Notification Preferences</h4>
-            <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" id="emailNotifications" checked>
-                <label class="form-check-label" for="emailNotifications">
-                    Receive email notifications
-                </label>
-            </div>
-            <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" id="pushNotifications">
-                <label class="form-check-label" for="pushNotifications">
-                    Receive push notifications
-                </label>
-            </div>
-            <h4 class="mt-4">Privacy Settings</h4>
-            <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" id="shareLocation">
-                <label class="form-check-label" for="shareLocation">
-                    Share location data
-                </label>
-            </div>
-            <button class="btn btn-primary" id="saveSettingsBtn">Save Settings</button>
+        <h2>Notifications</h2>
+        <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Booking Confirmed</h5>
+                    <small>3 mins ago</small>
+                </div>
+                <p class="mb-1">Your booking for Royal Enfield Classic 350 has been confirmed.</p>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">New Coupon Available</h5>
+                    <small>1 hour ago</small>
+                </div>
+                <p class="mb-1">Use code FLAT50 to get 50% off your first ride!</p>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Vehicle Available</h5>
+                    <small>2 hours ago</small>
+                </div>
+                <p class="mb-1">Honda Activa 6G is now available in your area.</p>
+            </a>
         </div>
     </main>
 
@@ -86,9 +87,9 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="vehicles.html" class="text-white">Vehicles</a></li>
-                        <li><a href="pricing.html" class="text-white">Pricing</a></li>
-                        <li><a href="locations.html" class="text-white">Locations</a></li>
+                        <li><a href="index.html" class="text-white">Vehicles</a></li>
+                        <li><a href="#" class="text-white">Pricing</a></li>
+                        <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-4 mb-md-0">
@@ -100,62 +101,27 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h5>Newsletter</h5>
-                    <form>
-                        <div class="mb-3">
-                            <input type="email" class="form-control" placeholder="Your Email" id="newsletterEmail">
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="subscribeBtn">Subscribe</button>
-                    </form>
+                    <h5>News Letter</h5>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" placeholder="Your Email">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Subscribe</button>
                 </div>
             </div>
             <hr class="my-4 bg-light">
-            <div class="text-center">
-                <p class="mb-0">&copy; 2025 Goo Ride. All rights reserved.</p>
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="mb-0">© 2023 Goo Ride. All rights reserved.</p>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <a href="../docs/privacy-policy.html" class="text-white me-3">Privacy Policy</a>
+                    <a href="../docs/terms-of-service.html" class="text-white me-3">Terms of Service</a>
+                    <a href="../docs/faq.html" class="text-white">FAQ</a>
+                </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Handle Save Settings button
-        document.getElementById('saveSettingsBtn')?.addEventListener('click', () => {
-            const emailNotifications = document.getElementById('emailNotifications').checked;
-            const pushNotifications = document.getElementById('pushNotifications').checked;
-            const shareLocation = document.getElementById('shareLocation').checked;
-
-            // Simulate saving settings (e.g., to localStorage or a server)
-            const settings = {
-                emailNotifications,
-                pushNotifications,
-                shareLocation
-            };
-            localStorage.setItem('userSettings', JSON.stringify(settings));
-
-            alert('Settings saved successfully!');
-        });
-
-        // Handle Newsletter subscription
-        document.getElementById('subscribeBtn')?.addEventListener('click', (e) => {
-            e.preventDefault();
-            const email = document.getElementById('newsletterEmail').value;
-            if (email) {
-                // Simulate subscribing to newsletter
-                localStorage.setItem('newsletterEmail', email);
-                alert('Subscribed to newsletter successfully!');
-                document.getElementById('newsletterEmail').value = '';
-            } else {
-                alert('Please enter a valid email address.');
-            }
-        });
-
-        // Load saved settings on page load
-        document.addEventListener('DOMContentLoaded', () => {
-            const savedSettings = JSON.parse(localStorage.getItem('userSettings')) || {};
-            document.getElementById('emailNotifications').checked = savedSettings.emailNotifications !== undefined ? savedSettings.emailNotifications : true;
-            document.getElementById('pushNotifications').checked = savedSettings.pushNotifications || false;
-            document.getElementById('shareLocation').checked = savedSettings.shareLocation || false;
-        });
-    </script>
 </body>
 </html>
