--- a/pages/posts.html
+++ b/pages/posts.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Likes - Goo Ride</title>
+    <title>My Posts - Goo Ride</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
     <header class="header sticky-top">
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                    <a class="navbar-brand me-3" href="../index.html">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
@@ -27,11 +27,12 @@
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
                             <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
                             <li><a class="dropdown-item" href="language.html"><i class="fas fa-language me-2"></i>Language</a></li>
-                            <li><a class="dropdown-item" href="help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
+                            <li><a class="dropdown-item" href="../docs/help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
                             <li><a class="dropdown-item" href="install.html"><i class="fas fa-download me-2"></i>Install App</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i>Log Out</a></li>
@@ -43,8 +44,8 @@
     </header>
 
     <main class="container py-5">
-        <h2>Liked Vehicles</h2>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4" id="likesContainer"></div>
+        <h2>My Posts</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4" id="postsContainer"></div>
     </main>
 
     <footer class="footer bg-dark text-white py-5">
@@ -78,7 +79,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h5>Newsletter</h5>
+                    <h5>News Letter</h5>
                     <form>
                         <div class="mb-3">
                             <input type="email" class="form-control" placeholder="Your Email" id="newsletterEmail">
@@ -97,30 +98,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
     <script>
-        // Load liked vehicles
-        function loadLikedVehicles() {
-            const likesContainer = document.getElementById('likesContainer');
-            if (!likesContainer) return;
+        // Sample user ID (in a real app, this would come from authentication)
+        const currentUserId = 1; // Replace with actual user ID from auth system
 
-            // Get liked vehicle IDs and vehicles from localStorage
-            const likedVehicles = JSON.parse(localStorage.getItem('likedVehicles')) || [];
-            let vehicles = JSON.parse(localStorage.getItem('vehicles')) || [];
+        // Load user posts
+        function loadUserPosts() {
+            const postsContainer = document.getElementById('postsContainer');
+            if (!postsContainer) return;
 
-            // Filter vehicles to show only liked ones
-            const likedVehicleData = vehicles.filter(vehicle => likedVehicles.includes(vehicle.id));
+            // Get vehicles from script.js (assumed to be global) or localStorage
+            let vehicles = JSON.parse(localStorage.getItem('vehicles')) || window.vehicles || [];
+            
+            // Filter vehicles by userId (add userId to vehicles for filtering)
+            const userPosts = vehicles.filter(vehicle => vehicle.userId === currentUserId);
 
-            if (likedVehicleData.length === 0) {
-                likesContainer.innerHTML = `
+            if (userPosts.length === 0) {
+                postsContainer.innerHTML = `
                     <div class="col-12 text-center py-5">
-                        <h4>No liked vehicles</h4>
-                        <p>You haven't liked any vehicles yet.</p>
-                        <a href="index.html" class="btn btn-primary">Browse Vehicles</a>
+                        <h4>No posts found</h4>
+                        <p>You haven't posted any vehicles yet.</p>
+                        <a href="post-vehicle.html" class="btn btn-primary">Add a Vehicle</a>
                     </div>
                 `;
                 return;
             }
 
-            likedVehicleData.forEach((vehicle, index) => {
+            userPosts.forEach((vehicle, index) => {
                 const card = document.createElement('div');
                 card.className = 'col';
                 card.innerHTML = `
@@ -129,8 +132,8 @@
                             <button class="btn btn-action view-btn" data-id="${vehicle.id}">
                                 <i class="fas fa-eye"></i>
                             </button>
-                            <button class="btn btn-action unlike-btn" data-id="${vehicle.id}">
-                                <i class="fas fa-heart"></i>
+                            <button class="btn btn-action delete-btn" data-id="${vehicle.id}">
+                                <i class="fas fa-trash"></i>
                             </button>
                         </div>
                         <div id="carousel${vehicle.id}" class="carousel slide">
@@ -163,7 +166,7 @@
                         </div>
                     </div>
                 `;
-                likesContainer.appendChild(card);
+                postsContainer.appendChild(card);
 
                 // Initialize Bootstrap carousel
                 new bootstrap.Carousel(document.getElementById(`carousel${vehicle.id}`), {
@@ -171,22 +174,24 @@
                 });
             });
 
-            // Add event listeners for view and unlike buttons
+            // Add event listeners for view and delete buttons
             document.querySelectorAll('.view-btn').forEach(btn => {
                 btn.addEventListener('click', (e) => {
                     const vehicleId = parseInt(e.currentTarget.dataset.id);
-                    window.location.href = `vehicle.html?id=${vehicleId}`;
+                    window.location.href = `pages/vehicle.html?id=${vehicleId}`;
                 });
             });
 
-            document.querySelectorAll('.unlike-btn').forEach(btn => {
+            document.querySelectorAll('.delete-btn').forEach(btn => {
                 btn.addEventListener('click', (e) => {
                     const vehicleId = parseInt(e.currentTarget.dataset.id);
-                    let likedVehicles = JSON.parse(localStorage.getItem('likedVehicles')) || [];
-                    likedVehicles = likedVehicles.filter(id => id !== vehicleId);
-                    localStorage.setItem('likedVehicles', JSON.stringify(likedVehicles));
-                    loadLikedVehicles(); // Refresh the list
-                    alert('Vehicle removed from likes!');
+                    if (confirm(`Are you sure you want to delete the post for vehicle ID ${vehicleId}?`)) {
+                        // Update vehicles by removing the deleted post
+                        vehicles = vehicles.filter(v => v.id !== vehicleId);
+                        localStorage.setItem('vehicles', JSON.stringify(vehicles));
+                        loadUserPosts(); // Refresh the posts
+                        alert('Post deleted successfully!');
+                    }
                 });
             });
         }
@@ -204,9 +209,9 @@
             }
         });
 
-        // Load liked vehicles on page load
+        // Load posts on page load
         document.addEventListener('DOMContentLoaded', () => {
-            loadLikedVehicles();
+            loadUserPosts();
         });
     </script>
 </body>
