--- a/pages/user.html
+++ b/pages/user.html
@@ -6,15 +6,15 @@
     <title>My Posts - Goo Ride</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
     <header class="header sticky-top">
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
                 <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                    <a class="navbar-brand me-3" href="../index.html">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white">
                         <i class="fas fa-home fs-4"></i>
                     </a>
                     <div class="flex-grow-1"></div>
@@ -27,11 +27,12 @@
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
                             <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
                             <li><a class="dropdown-item" href="language.html"><i class="fas fa-language me-2"></i>Language</a></li>
-                            <li><a class="dropdown-item" href="help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
+                            <li><a class="dropdown-item" href="../docs/help.html"><i class="fas fa-question-circle me-2"></i>Help</a></li>
                             <li><a class="dropdown-item" href="install.html"><i class="fas fa-download me-2"></i>Install App</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="logout.html"><i class="fas fa-sign-out-alt me-2"></i>Log Out</a></li>
@@ -64,7 +65,7 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="vehicles.html" class="text-white">Vehicles</a></li>
+                        <li><a href="pages/vehicles.html" class="text-white">Vehicles</a></li>
                         <li><a href="pricing.html" class="text-white">Pricing</a></li>
                         <li><a href="locations.html" class="text-white">Locations</a></li>
                     </ul>
@@ -78,7 +79,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h5>Newsletter</h5>
+                    <h5>News Letter</h5>
                     <form>
                         <div class="mb-3">
                             <input type="email" class="form-control" placeholder="Your Email" id="newsletterEmail">
