--- a/pages/vehicle.html
+++ b/pages/vehicle.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History - Goo Ride</title>
+    <title>Goo Ride - Vehicle Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header class="header sticky-top">
         <nav class="navbar navbar-dark bg-dark py-2">
             <div class="container">
-                <div class="d-flex align-items-center w-100 gap-3">
-                    <a class="navbar-brand me-3" href="index.html">GOO RIDE</a>
-                    <a href="index.html" class="home-btn text-white">
+                <div class="d-flex align-items-center w-100 gap-4">
+                    <a class="navbar-brand" href="../index.html" onclick="resetFilters()">GOO RIDE</a>
+                    <a href="../index.html" class="home-btn text-white" onclick="resetFilters()">
                         <i class="fas fa-home fs-4"></i>
                     </a>
-                    <div class="flex-grow-1"></div>
+                    <div class="flex-grow-1">
+                        <input type="text" class="search-bar form-control" placeholder="Search vehicles..." id="searchInput">
+                    </div>
                     <div class="dropdown">
-                        <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown">
+                        <button class="btn btn-link text-white p-0" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user fs-4"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
@@ -27,6 +30,7 @@
                             <li><a class="dropdown-item" href="posts.html"><i class="fas fa-list me-2"></i>My Posts</a></li>
                             <li><a class="dropdown-item" href="likes.html"><i class="fas fa-heart me-2"></i>Likes</a></li>
                             <li><a class="dropdown-item" href="saved.html"><i class="fas fa-bookmark me-2"></i>Saved</a></li>
+                            <li><a class="dropdown-item" href="chats.html"><i class="fas fa-comment me-2"></i>Chats</a></li>
                             <li><a class="dropdown-item" href="history.html"><i class="fas fa-history me-2"></i>History</a></li>
                             <li><a class="dropdown-item" href="notifications.html"><i class="fas fa-bell me-2"></i>Notifications</a></li>
                             <li><a class="dropdown-item" href="settings.html"><i class="fas fa-cog me-2"></i>Settings</a></li>
@@ -42,46 +46,35 @@
         </nav>
     </header>
 
-    <main class="container py-5">
-        <h2>Booking History</h2>
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Vehicle</th>
-                        <th>Plate</th>
-                        <th>Location</th>
-                        <th>Date</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Royal Enfield Classic 350</td>
-                        <td>MH01AB1234</td>
-                        <td>Mumbai Central</td>
-                        <td>2023-10-15</td>
-                        <td><span class="badge bg-success">Completed</span></td>
-                    </tr>
-                    <tr>
-                        <td>Honda Activa 6G</td>
-                        <td>DL03EF9012</td>
-                        <td>Delhi Metro Station</td>
-                        <td>2023-10-10</td>
-                        <td><span class="badge bg-success">Completed</span></td>
-                    </tr>
-                    <tr>
-                        <td>Bajaj Pulsar NS200</td>
-                        <td>KA02CD5678</td>
-                        <td>Bengaluru Tech Park</td>
-                        <td>2023-10-05</td>
-                        <td><span class="badge bg-warning">Cancelled</span></td>
-                    </tr>
-                </tbody>
-            </table>
+    <!-- Main Content -->
+    <main class="main-content">
+        <div class="container py-4">
+            <div id="vehicleDetail" class="row mb-4">
+                <div class="col-md-9 vehicle-photos">
+                    <div id="vehiclePhotoCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner"></div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#vehiclePhotoCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#vehiclePhotoCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-3 vehicle-card-detail d-flex flex-column">
+                    <div id="vehicleDetailsContent" class="p-3 flex-grow-1 vehicle-details-container"></div>
+                    <a href="./chat.html" class="btn btn-primary w-100 mt-3 chat-btn">Chat with Owner</a>
+                    <button class="btn btn-outline-primary w-100 mt-3 mb-4 view-map-btn">View on Map</button>
+                </div>
+            </div>
+            <h3 class="mb-4">Recommended Vehicles</h3>
+            <div class="d-flex flex-row gap-3" id="recommendedVehicles"></div>
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
             <div class="row">
@@ -98,8 +91,8 @@
                 <div class="col-md-2 mb-4 mb-md-0">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="index.html" class="text-white">Vehicles</a></li>
+                        <li><a href="../index.html" class="text-white">Home</a></li>
+                        <li><a href="../index.html" class="text-white">Vehicles</a></li>
                         <li><a href="#" class="text-white">Pricing</a></li>
                         <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
@@ -135,5 +128,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/vehicle.js"></script>
 </body>
 </html>
