--- a/pages/install.html
+++ b/pages/install.html
@@ -105,9 +105,9 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="vehicles.html" class="text-white">Vehicles</a></li>
-                        <li><a href="pricing.html" class="text-white">Pricing</a></li>
-                        <li><a href="locations.html" class="text-white">Locations</a></li>
+                        <li><a href="#" class="text-white">Vehicles</a></li>
+                        <li><a href="#" class="text-white">Pricing</a></li>
+                        <li><a href="#" class="text-white">Locations</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-4 mb-md-0">
